# Credit-Scoring-CUDA

./: CMakeLists.txt  README.md  mlp_cuda.cu
